zoom in out fix on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
      -webkit-transform:scale(1);
      -o-transform:scale(1);
      -ms-transform:scale(1); */
+  touch-action: pan-x pan-y;
 }
 
 html {
